--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -2653,8 +2653,8 @@
  BDW_authoritarian_monarchism_DEF:0 "The Alemanni Kingdom of Swabians"
  BDW_stratocratic:0 "Martial State of Alemanne"
  BDW_stratocratic_DEF:0 "The Martial State of Alemanne"
- BDW_stratocratic_monarchism:0 "Swabian Military Order"
- BDW_stratocratic_monarchism_DEF:0 "The Swabian Military Order"
+ BDW_stratocratic_monarchism:0 "Confederation of the Upper Rhine"
+ BDW_stratocratic_monarchism_DEF:0 "The Confederation of the Upper Rhine"
  BDW_monarchism:0 "Swabian Empire"
  BDW_monarchism_DEF:0 "The Swabian Empire"
  BDW_republican_fascism:0 "Suebireich"
