--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -11194,6 +11194,9 @@
  SCH_fascism:0 "Greater Schleswig"
  SCH_fascism_DEF:0 "The Empire of Greater Schleswig"
  SCH_fascism_ADJ:0 "Schleswigian"
+ SCH_stratocratic_monarchism:0 "Duchy of Schleswig"
+ SCH_stratocratic_monarchism_DEF:0 "The Duchy of Schleswig"
+ SCH_stratocratic_monarchism_ADJ:0 "Schleswigian"
 
  NQS_neutrality:0 "State of North Queensland"
  NQS_neutrality_DEF:0 "The State of North Queensland"
@@ -11256,6 +11259,9 @@
  HLS_fascism:0 "National Socialist State of Holstein"
  HLS_fascism_DEF:0 "The National Socialist State of Holstein"
  HLS_fascism_ADJ:0 "Holsteiner"
+ HLS_stratocratic_monarchism:0 "Duchy of Holstein"
+ HLS_stratocratic_monarchism_DEF:0 "The Duchy of Holstein"
+ HLS_stratocratic_monarchism_ADJ:0 "Holsteiner"
 
  KMN_neutrality:0 "State of Karaman"
  KMN_neutrality_DEF:0 "The State of Karaman"
@@ -15275,8 +15281,8 @@
  MLO_centrist_monarchism:0 "Principality of Milan"
  MLO_centrist_monarchism_DEF:0 "Principality of Milan"
  MLO_centrist_monarchism_ADJ:0 "Milan"
- MLO_stratocratic_monarchism:0 "Regency of Milan"
- MLO_stratocratic_monarchism_DEF:0 "Regency of Milan"
+ MLO_stratocratic_monarchism:0 "Republic of Milan"
+ MLO_stratocratic_monarchism_DEF:0 "Republic of Milan"
  MLO_stratocratic_monarchism_ADJ:0 "Milan"
 
  KCP_neutrality:0 "State of Kochgiri"
