--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -97,9 +97,9 @@
  VCT_stratocratic:0 "Roman Military Junta"
  VCT_stratocratic_DEF:0 "The Roman Military Junta"
  VCT_stratocratic_ADJ:0 "Roman"
- VCT_stratocratic_monarchism:0 "Roman State"
- VCT_stratocratic_monarchism_DEF:0 "The Roman State"
- VCT_stratocratic_monarchism_ADJ:0 "Roman"
+ VCT_stratocratic_monarchism:0 "Holy and Sovereign Territories of the Roman Catholic Church"
+ VCT_stratocratic_monarchism_DEF:0 "The Holy and Sovereign Territories of the Roman Catholic Church"
+ VCT_stratocratic_monarchism_ADJ:0 "Papal"
  VCT_monarchism:0 "Roman Kingdom"
  VCT_monarchism_DEF:0 "The Roman Kingdom"
  VCT_monarchism_ADJ:0 "Roman"
@@ -882,8 +882,8 @@
  HOL_stratocratic:0 "Dutch Military Junta"
  HOL_stratocratic_DEF:0 "The Dutch Military Junta"
  HOL_stratocratic_ADJ:0 "Dutch"
- HOL_stratocratic_monarchism:0 "United Provinces of the Netherlands"
- HOL_stratocratic_monarchism_DEF:0 "The United Provinces of the Netherlands"
+ HOL_stratocratic_monarchism:0 "Kingdom of Holland"
+ HOL_stratocratic_monarchism_DEF:0 "The Kingdom of Holland"
  HOL_stratocratic_monarchism_ADJ:0 "Dutch"
  HOL_monarchism:0 "Dutch Kingdom"
  HOL_monarchism_DEF:0 "The Dutch Kingdom"
@@ -1151,8 +1151,8 @@
  IRE_stratocratic:0 "Irish Military Junta"
  IRE_stratocratic_DEF:0 "The Irish Military Junta"
  IRE_stratocratic_ADJ:0 "Irish"
- IRE_stratocratic_monarchism:0 "Irish Provisional Government"
- IRE_stratocratic_monarchism_DEF:0 "The Irish Provisional Government"
+ IRE_stratocratic_monarchism:0 "Irish Kingdom"
+ IRE_stratocratic_monarchism_DEF:0 "The Irish Kingdom"
  IRE_stratocratic_monarchism_ADJ:0 "Irish"
  IRE_authoritarian_monarchism:0 "Dominion of Ireland"
  IRE_authoritarian_monarchism_DEF:0 "The Dominion of Ireland"
@@ -2280,8 +2280,8 @@
  SPR_stratocratic:0 "Spanish Military Junta"
  SPR_stratocratic_DEF:0 "The Spanish Military Junta"
  SPR_stratocratic_ADJ:0 "Spanish"
- SPR_stratocratic_monarchism:0 "Spanish State"
- SPR_stratocratic_monarchism_DEF:0 "The Spanish State"
+ SPR_stratocratic_monarchism:0 "Kingdom of Spain"
+ SPR_stratocratic_monarchism_DEF:0 "The Kingdom of Spain"
  SPR_stratocratic_monarchism_ADJ:0 "Spanish"
  SPR_monarchism:0 "United Kingdoms of Spain and France"
  SPR_monarchism_DEF:0 "The United Kingdoms of Spain and France"
@@ -2336,8 +2336,8 @@
  GER_authoritarian_monarchism_DEF:0 "The German Empire"
  GER_stratocratic:0 "German Military Junta"
  GER_stratocratic_DEF:0 "The German Military Junta"
- GER_stratocratic_monarchism:0 "German Provisional Government"
- GER_stratocratic_monarchism_DEF:0 "The German Provisional Government"
+ GER_stratocratic_monarchism:0 "Confederation of Germany"
+ GER_stratocratic_monarchism_DEF:0 "The Confederation of Germany"
  GER_monarchism:0 "Deutsches Kaiserreich"
  GER_monarchism_DEF:0 "Das Deutsche Kaiserreich"
  GER_republican_fascism:0 "National Socialist Republic of Germany"
@@ -2715,8 +2715,8 @@
  FRA_authoritarian_monarchism_DEF:0 "The Kingdom of France"
  FRA_stratocratic:0 "French Junta"
  FRA_stratocratic_DEF:0 "The French Junta"
- FRA_stratocratic_monarchism:0 "Third French Empire"
- FRA_stratocratic_monarchism_DEF:0 "The Third French Empire"
+ FRA_stratocratic_monarchism:0 "French Empire"
+ FRA_stratocratic_monarchism_DEF:0 "The French Empire"
  FRA_monarchism:0 "Franco-Spanish Union"
  FRA_monarchism_DEF:0 "The Franco-Spanish Union"
  FRA_republican_fascism:0 "French State"
@@ -5163,8 +5163,8 @@
  WGR_conservative_monarchism_DEF:0 "United Kingdoms of of Nidersachse-Alemannia"
  WGR_stratocratic:0 "West German Military Government"
  WGR_stratocratic_DEF:0 "West German Military Government"
- WGR_stratocratic_monarchism:0 "Nidersachse-Allemagnia Militärjunta"
- WGR_stratocratic_monarchism_DEF:0 "The Nidersachse-Allemagnia Militärjunta"
+ WGR_stratocratic_monarchism:0 "North German Confederation"
+ WGR_stratocratic_monarchism_DEF:0 "The North German Confederation"
  WGR_authoritarian_monarchism:0 "Kingdom of Germany"
  WGR_authoritarian_monarchism_DEF:0 "The Kingdom of Germany"
  WGR_theocratic:0 "Holy Lutheran Commonwealth of Germany"
@@ -6444,8 +6444,8 @@
  BAY_authoritarian_monarchism_DEF:0 "The Electorate of Bavaria"
  BAY_stratocratic:0 "American Ocupation Zone"
  BAY_stratocratic_DEF:0 "The American Ocupation Zone"
- BAY_stratocratic_monarchism:0 "Duchy of Bavaria"
- BAY_stratocratic_monarchism_DEF:0 "The Duchy of Bavaria"
+ BAY_stratocratic_monarchism:0 "Kingdom of Bavaria"
+ BAY_stratocratic_monarchism_DEF:0 "The Kingdom of Bavaria"
  BAY_monarchism:0 "Kingdom of Bavaria"
  BAY_monarchism_DEF:0 "The Kingdom of Bavaria"
  BAY_republican_fascism:0 "Free State of Bavaria"
@@ -7690,8 +7690,8 @@
  VNC_authoritarian_monarchism:0 "Kingdom of Lombardy-Venetia"
  VNC_authoritarian_monarchism_DEF:0 "The Kingdom of Lombardy-Venetia"
  VNC_authoritarian_monarchism_ADJ:0 "Lombardy-Venetian"
- VNC_stratocratic_monarchism:0 "Federated Kingdom of Lombardy and Venetia"
- VNC_stratocratic_monarchism_DEF:0 "The Federated Kingdom of Lombardy and Venetia"
+ VNC_stratocratic_monarchism:0 "Republic of Venice"
+ VNC_stratocratic_monarchism_DEF:0 "The Republic of Venice"
  VNC_monarchism:0 "Kingdom of Venetia"
  VNC_monarchism_DEF:0 "The Kingdom of Venetia"
  VNC_republican_fascism:0 "Venetian Social Republic"
@@ -7846,6 +7846,8 @@
  TUS_centrist_republic_DEF:0 "The Grand Tuscan Republic"
  TUS_liberal_republic:0 "Tuscan Republic"
  TUS_liberal_republic_DEF:0 "The Tuscan Republic"
+ TUS_stratocratic_monarchism:0 "Republic of Tuscany"
+ TUS_stratocratic_monarchism_DEF:0 "The Republic of Tuscany"
  TUS_ADJ:0 "Tuscan"
  
  BAD_anarchism_ideology:0 "Alemanni"
@@ -8879,8 +8881,9 @@
  NAP_centrist_monarchism_DEF:0 "The Southern Italian Kingdom"
  NAP_conservative_monarchism:0 "Italian Empire"
  NAP_conservative_monarchism_DEF:0 "The Italian Empire"
- NAP_stratocratic_monarchism:0 "Kingdom of Naples"
- NAP_stratocratic_monarchism_DEF:0 "The Kingdom of Naples"
+ NAP_stratocratic_monarchism:0 "South Italian Condominium"
+ NAP_stratocratic_monarchism_DEF:0 "The South Italian Condominium"
+ NAP_stratocratic_monarchism_ADJ:0 "South Italian"
  NAP_national_socialism:0 "Reichsprotektorat Süditalien"
  NAP_national_socialism_DEF:0 "das Reichsprotektorat Süditalien"
  NAP_right_anarchism:0 "Union of Neapolitan Clans"
