--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -946,8 +946,8 @@
  LIT_stratocratic:0 "Lithuanian Military Junta"
  LIT_stratocratic_DEF:0 "The Lithuanian Military Junta"
  LIT_stratocratic_ADJ:0 "Lithuanian"
- LIT_stratocratic_monarchism:0 "Vilna Governorate-General"
- LIT_stratocratic_monarchism_DEF:0 "The Vilna Governorate-General"
+ LIT_stratocratic_monarchism:0 "Lithuanian Provisional Government"
+ LIT_stratocratic_monarchism_DEF:0 "The Lithuanian Provisional Government"
  LIT_stratocratic_monarchism_ADJ:0 "Lithuanian"
  LIT_authoritarian_monarchism:0 "Grand Duchy of Lithuania"
  LIT_authoritarian_monarchism_DEF:0 "The Grand Duchy of Lithuania"
@@ -2534,8 +2534,8 @@
  DEN_stratocratic:0 "Danish Military Junta"
  DEN_stratocratic_DEF:0 "The Danish Military Junta"
  DEN_stratocratic_ADJ:0 "Danish"
- DEN_stratocratic_monarchism:0 "Kingdom of Denmark"
- DEN_stratocratic_monarchism_DEF:0 "The Kingdom of Denmark"
+ DEN_stratocratic_monarchism:0 "United Kingdom of Denmark and Norway"
+ DEN_stratocratic_monarchism_DEF:0 "The United Kingdom of Denmark and Norway"
  DEN_stratocratic_monarchism_ADJ:0 "Danish"
  DEN_authoritarian_monarchism:0 "Kalmar Kingdom of Denmark"
  DEN_authoritarian_monarchism_DEF:0 "The Kalmar Kingdom of Denmark"
@@ -2821,8 +2821,8 @@
  POL_stratocratic:0 "Polish Military Government"
  POL_stratocratic_DEF:0 "The Polish Military Government"
  POL_stratocratic_ADJ:0 "Polish"
- POL_stratocratic_monarchism:0 "Polish Kingdom"
- POL_stratocratic_monarchism_DEF:0 "The Polish Kingdom"
+ POL_stratocratic_monarchism:0 "Grand Duchy of Warsaw"
+ POL_stratocratic_monarchism_DEF:0 "The Grand Duchy of Warsaw"
  POL_stratocratic_monarchism_ADJ:0 "Polish"
  POL_authoritarian_monarchism:0 "Kingdom of Poland"
  POL_authoritarian_monarchism_DEF:0 "The Kingdom of Poland"
@@ -6587,8 +6587,8 @@
  PRE_authoritarian_monarchism_DEF:0 "The Empire of Prussia"
  PRE_stratocratic:0 "Preußischer Wehrstaat"
  PRE_stratocratic_DEF:0 "Der Preußische Wehrstaat"
- PRE_stratocratic_monarchism:0 "Prussian Provisional Government"
- PRE_stratocratic_monarchism_DEF:0 "The Prussian Provisional Government"
+ PRE_stratocratic_monarchism:0 "Kingdom of Prussia"
+ PRE_stratocratic_monarchism_DEF:0 "The Kingdom of Prussia"
  PRE_monarchism:0 "Kingdom of Prussia"
  PRE_monarchism_DEF:0 "The Kingdom of Prussia"
  PRE_republican_fascism:0 "Prussian Peoples State"
@@ -8881,8 +8881,8 @@
  NAP_centrist_monarchism_DEF:0 "The Southern Italian Kingdom"
  NAP_conservative_monarchism:0 "Italian Empire"
  NAP_conservative_monarchism_DEF:0 "The Italian Empire"
- NAP_stratocratic_monarchism:0 "South Italian Condominium"
- NAP_stratocratic_monarchism_DEF:0 "The South Italian Condominium"
+ NAP_stratocratic_monarchism:0 "Kingdom of Naples"
+ NAP_stratocratic_monarchism_DEF:0 "The Kingdom of Naples"
  NAP_stratocratic_monarchism_ADJ:0 "South Italian"
  NAP_national_socialism:0 "Reichsprotektorat Süditalien"
  NAP_national_socialism_DEF:0 "das Reichsprotektorat Süditalien"
@@ -18893,6 +18893,8 @@
  LBD_centrist_republic:0 "Colony of Vinland"
  LBD_centrist_republic_DEF:0 "The Colony of Vinland"
  LBD_centrist_republic_ADJ:0 "Vinlandish"
+ LBD_stratocratic_monarchism:0 "Colony of Grand Nord"
+ LBD_stratocratic_monarchism_DEF:0 "The Colony of Grand Nord"
  LBD_ADJ:0 "Labradoran"
  
  CHC_communism:0 "Chicago Commune"
@@ -31570,8 +31572,8 @@
  RSI_authoritarian_monarchism_DEF:0 "The Commonwealth of Italy"
  RSI_stratocratic:0 "National Social State of Italy"
  RSI_stratocratic_DEF:0 "The National Social State of Italy"
- RSI_stratocratic_monarchism:0 "Italian Regency"
- RSI_stratocratic_monarchism_DEF:0 "The Italian Regency"
+ RSI_stratocratic_monarchism:0 "Kingdom of Italy"
+ RSI_stratocratic_monarchism_DEF:0 "The Kingdom of Italy"
  RSI_monarchism:0 "Northern Italian Kingdom"
  RSI_monarchism_DEF:0 "The Northern Italian Kingdom"
  RSI_republican_fascism:0 "Italian Social Republic"
@@ -32137,8 +32139,8 @@
  QUE_authoritarian_monarchism_DEF:0 "The Province of Lower Canada"
  QUE_stratocratic:0 "Quebec Military Junta"
  QUE_stratocratic_DEF:0 "The Quebec Military Junta"
- QUE_stratocratic_monarchism:0 "Province of Quebec"
- QUE_stratocratic_monarchism_DEF:0 "The Province of Quebec"
+ QUE_stratocratic_monarchism:0 "Quebec Colony"
+ QUE_stratocratic_monarchism_DEF:0 "The Quebec Colony"
  QUE_monarchism:0 "Kingdom of Quebec" 
  QUE_monarchism_DEF:0 "The Kingdom of Quebec"
  QUE_republican_fascism:0 "Quebec State"
