--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -4181,8 +4181,9 @@
  NVS_conservative_monarchism_ADJ:0 "Scottish American"
  NVS_stratocratic:0 "All-Canadian Salvation Committee"
  NVS_stratocratic_DEF:0 "The All-Canadian Salvation Committee"
- NVS_stratocratic_monarchism:0 "Royal Canadian Navy"
- NVS_stratocratic_monarchism_DEF:0 "The Royal Canadian Navy"
+ NVS_stratocratic_monarchism:0 "Colony of Acadie-Sud"
+ NVS_stratocratic_monarchism_DEF:0 "The Colony of Acadie-Sud"
+ NVS_stratocratic_monarchism_ADJ:0 "Acadien"
  NVS_monarchism:0 "Kingdom of Nova Scotia"
  NVS_monarchism_DEF:0 "The Kingdom of Nova Scotia"
  NVS_ADJ:0 "Nova Scotian"
@@ -4210,9 +4211,9 @@
  NBK_centrist_monarchism:0 "Martime Provinces"
  NBK_centrist_monarchism_DEF:0 "The Martime Provinces"
  NBK_centrist_monarchism_ADJ:0 "Martime"
- NBK_stratocratic_monarchism:0 "Colony of Acadia"
- NBK_stratocratic_monarchism_DEF:0 "The Colony of Acadia"
- NBK_stratocratic_monarchism_ADJ:0 "Acadian"
+ NBK_stratocratic_monarchism:0 "Colony of Acadie-Nord"
+ NBK_stratocratic_monarchism_DEF:0 "The Colony of Acadie-Nord"
+ NBK_stratocratic_monarchism_ADJ:0 "Acadien"
  NBK_democratic:0 "Territory of New Brunswick"
  NBK_democratic_DEF:0 "the Territory of New Brunswick"
  NBK_ADJ:0 "New Brunswicker"
@@ -19189,9 +19190,11 @@
  BOG_authoritarian_monarchism_DEF:0 "The Duchy of Bologna"
  BOG_ADJ:0 "Bolognese"
  
- PIO_neutrality:0 "Piombino"
- PIO_neutrality_DEF:0 "Piombino"
- PIO_neutrality_ADJ:0 "Piombinesi"
+ PIO_neutrality:0 "Kingdom of Piombino"
+ PIO_neutrality_DEF:0 "The Kingdom of Piombino"
+ PIO_stratocratic_monarchism:0 "Principality of Lucca and Piombino"
+ PIO_stratocratic_monarchism_DEF:0 "The Principality of Lucca and Piombino"
+ PIO_ADJ:0 "Piombinesi"
  
  HIN:0 "Hainan"
  HIN_DEF:0 "Hainan"
