is there a way to prevent this from announcing in discord

--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -4244,8 +4244,8 @@
  ONT_authoritarian_monarchism:0 "Province of Upper Canada"
  ONT_authoritarian_monarchism_DEF:0 "The Province of Upper Canada"
  ONT_authoritarian_monarchism_ADJ:0 "Upper Canadian"
- ONT_stratocratic_monarchism:0 "Royal Canadian Mounted Police"
- ONT_stratocratic_monarchism_DEF:0 "The Royal Canadian Mounted Police"
+ ONT_stratocratic_monarchism:0 "Colony of the Great Lakes"
+ ONT_stratocratic_monarchism_DEF:0 "The Colony of the Great Lakes"
  ONT_republican_fascism:0 "State of Ontario"
  ONT_republican_fascism_DEF:0 "The State of Ontario"
  ONT_fascism:0 "United Kingdom in Canada"
