--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -882,8 +882,8 @@
  HOL_stratocratic:0 "Dutch Military Junta"
  HOL_stratocratic_DEF:0 "The Dutch Military Junta"
  HOL_stratocratic_ADJ:0 "Dutch"
- HOL_stratocratic_monarchism:0 "Kingdom of Holland"
- HOL_stratocratic_monarchism_DEF:0 "The Kingdom of Holland"
+ HOL_stratocratic_monarchism:0 "Kingdom of the Netherlands in Exile"
+ HOL_stratocratic_monarchism_DEF:0 "The Kingdom of the Netherlands in Exile"
  HOL_stratocratic_monarchism_ADJ:0 "Dutch"
  HOL_monarchism:0 "Dutch Kingdom"
  HOL_monarchism_DEF:0 "The Dutch Kingdom"
@@ -32139,8 +32139,8 @@
  QUE_authoritarian_monarchism_DEF:0 "The Province of Lower Canada"
  QUE_stratocratic:0 "Quebec Military Junta"
  QUE_stratocratic_DEF:0 "The Quebec Military Junta"
- QUE_stratocratic_monarchism:0 "Quebec Colony"
- QUE_stratocratic_monarchism_DEF:0 "The Quebec Colony"
+ QUE_stratocratic_monarchism:0 "Colony of Quebec"
+ QUE_stratocratic_monarchism_DEF:0 "The Colony of Quebec"
  QUE_monarchism:0 "Kingdom of Quebec" 
  QUE_monarchism_DEF:0 "The Kingdom of Quebec"
  QUE_republican_fascism:0 "Quebec State"
