--- a/localisation/english/MM_countries2_l_english.yml
+++ b/localisation/english/MM_countries2_l_english.yml
@@ -113,6 +113,9 @@
  OT2_neutrality:0 "Muskeg Guards"
  OT2_neutrality_DEF:0 "The Muskeg Guards"
  OT2_neutrality_ADJ:0 "Muskeg"
+ OT2_stratocratic_monarchism:0 "North West Territory"
+ OT2_stratocratic_monarchism_DEF:0 "The North West Territory"
+ OT2_stratocratic_monarchism_ADJ:0 "French"
 
  CH3_stratocratic:0 "Chahar Clique"
  CH3_stratocratic_DEF:0 "The Chahar Clique"
