--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -18542,8 +18542,8 @@
  WSC_socialism_ideology_DEF:0 "The Progressive Union of America"
  WSC_democratic_monarchism:0 "Grand Duchy of Wisconsin"
  WSC_democratic_monarchism_DEF:0 "The Grand Duchy of Wisconsin"
- WSC_centrist_republic:0 "Republic of Wisconsin"
- WSC_centrist_republic_DEF:0 "The Republic of Wisconsin"
+ WSC_centrist_republic:0 "Territory of Wisconsin"
+ WSC_centrist_republic_DEF:0 "The Territory of Wisconsin"
  WSC_stratocratic:0 "Milwaukee Tank Brigade"
  WSC_stratocratic_DEF:0 "The Milwaukee Tank Brigade"
  WSC_authoritarian_monarchism:0 "Colony of Wisconsin"
@@ -19398,6 +19398,8 @@
  CYR_fascism:0 "Senussi Order"
  CYR_fascism_DEF:0 "The Senussi Order"
  CYR_fascism_ADJ:0 "Senussi"
+ CYR_anarchism_ideology:0 "East Saharan Nomads"
+ CYR_anarchism_ideology_DEF:0 "The East Saharan Nomads"
  
  EPR_communism:0 "People's Republic of Epirus"
  EPR_communism_DEF:0 "The People's Republic of Epirus"
@@ -22445,8 +22447,12 @@
  TSK_democratic_DEF:0 "The Republic of Transkei"
  TSK_liberal_republic:0 "Republic of KwaXhosa"
  TSK_liberal_republic_DEF:0 "The Republic of KwaXhosa"
+ TSK_liberal_republic_ADJ:0 "KwaXhosa"
  TSK_communism:0 "Transkeian Socialist Republic"
  TSK_communism_DEF:0 "The Transkeian Socialist Republic"
+ TSK_authoritarian_monarchism:0 "Territory of Kaffraria"
+ TSK_authoritarian_monarchism_DEF:0 "The Territory of Kaffraria"
+ TSK_authoritarian_monarchism_ADJ:0 "Kaffrarian"
  TSK_fascism:0 "Transkeian Empire"
  TSK_fascism_DEF:0 "The Transkeian Empire"
  TSK_neutrality:0 "Transkei"
