going to master to work on states

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1623,8 +1623,8 @@
  MEX_democratic_DEF:0 "The Republic of Mexico"
  MEX_conservative_monarchism:0 "Empire of Mexico"
  MEX_conservative_monarchism_DEF:0 "The Empire of Mexico"
- MEX_anocratic_republic:0 "United Mexican States"
- MEX_anocratic_republic_DEF:0 "The United Mexican States"
+ MEX_anocratic_republic:0 "Centralist Republic of Mexico"
+ MEX_anocratic_republic_DEF:0 "The Centralist Republic of Mexico"
  MEX_anocratic_monarchism:0 "United Kingdom of Mexico"
  MEX_anocratic_monarchism_DEF:0 "The United Kingdom of Mexico"
  MEX_neutrality:0 "Mexican State"
@@ -2693,20 +2693,20 @@
  FRA_socialism_ideology_DEF:0 "The Socialist Republic of France"
  FRA_socialist_monarchy:0 "France"
  FRA_socialist_monarchy_DEF:0 "France"
- FRA_liberal_republic:0 "Republic of France"
- FRA_liberal_republic_DEF:0 "The Republic of France"
+ FRA_liberal_republic:0 "European Republic"
+ FRA_liberal_republic_DEF:0 "The European Republic"
  FRA_democratic_monarchism:0 "French Kingdom"
  FRA_democratic_monarchism_DEF:0 "The French Kingdom"
- FRA_centrist_republic:0 "French Republic"
- FRA_centrist_republic_DEF:0 "The French Republic"
+ FRA_centrist_republic:0 "Federal Republic of Europe"
+ FRA_centrist_republic_DEF:0 "The Federal Republic of Europe"
  FRA_centrist_monarchism:0 "West Francia"
  FRA_centrist_monarchism_DEF:0 "West Francia"
  FRA_democratic:0 "Federal Republic of France"
  FRA_democratic_DEF:0 "The Federal Republic of France"
  FRA_conservative_monarchism:0 "Second French Empire"
  FRA_conservative_monarchism_DEF:0 "The Second French Empire"
- FRA_anocratic_republic:0 "State of France"
- FRA_anocratic_republic_DEF:0 "The State of France"
+ FRA_anocratic_republic:0 "State of Francia"
+ FRA_anocratic_republic_DEF:0 "The State of Francia"
  FRA_anocratic_monarchism:0 "French Empire"
  FRA_anocratic_monarchism_DEF:0 "The French Empire"
  FRA_neutrality:0 "Free France"
@@ -18536,8 +18536,8 @@
  WSC_anarchism_ideology:0 "Menominee Tribes"
  WSC_anarchism_ideology_DEF:0 "The Menominee Tribes"
  WSC_anarchism_ideology_ADJ:0 "Menominee"
- WSC_liberal_republic:0 "State of Wisconsin"
- WSC_liberal_republic_DEF:0 "The State of Wisconsin"
+ WSC_liberal_republic:0 "Territory of Wisconsin"
+ WSC_liberal_republic_DEF:0 "The Territory of Wisconsin"
  WSC_socialism_ideology:0 "Progressive Union of America"
  WSC_socialism_ideology_DEF:0 "The Progressive Union of America"
  WSC_democratic_monarchism:0 "Grand Duchy of Wisconsin"
@@ -20406,8 +20406,8 @@
  KBY_monarchism:0 "Kingdom of Kabylie"
  KBY_monarchism_DEF:0 "The Kingdom of Kabylie"
  KBY_monarchism_ADJ:0 "Kabyle"
- KBY_authoritarian_monarchism:0 "Colony of Kabylie"
- KBY_authoritarian_monarchism_DEF:0 "The Colony of Kabylie"
+ KBY_authoritarian_monarchism:0 "Proectorate of Kabylie"
+ KBY_authoritarian_monarchism_DEF:0 "The Proectorate of Kabylie"
  KBY_authoritarian_monarchism_ADJ:0 "Kabyle"
  KBY_democratic_monarchism:0 "Regency of Algiers"
  KBY_democratic_monarchism_DEF:0 "The Regency of Algiers"
@@ -21350,17 +21350,17 @@
  TSV_fascism:0 "Transvaalian Empire"
  TSV_fascism_DEF:0 "The Transvaalian Empire"
  TSV_fascism_ADJ:0 "Transvaalian"
- TSV_neutrality:0 "Transvaal"
- TSV_neutrality_DEF:0 "The Transvaal"
- TSV_neutrality_ADJ:0 "Transvaalian"
+ TSV_neutrality:0 "Boers"
+ TSV_neutrality_DEF:0 "The Boers"
+ TSV_neutrality_ADJ:0 "Boer"
  TSV_monarchism:0 "Kingdom of Transvaal"
  TSV_monarchism_DEF:0 "The Kingdom of Transvaal"
  TSV_monarchism_ADJ:0 "Transvaalian"
  TSV_authoritarian_monarchism:0 "Transvaal Colony"
  TSV_authoritarian_monarchism_DEF:0 "The Transvaal Colony"
  TSV_authoritarian_monarchism_ADJ:0 "Transvaalian"
- TSV_centrist_republic:0 "Boers"
- TSV_centrist_republic_DEF:0 "The Boers"
+ TSV_centrist_republic:0 "United Boer Republics"
+ TSV_centrist_republic_DEF:0 "The United Boer Republics"
  TSV_centrist_republic_ADJ:0 "Boer"
  
  GQE_democratic:0 "Republic of New Griqualand"
