--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -18855,8 +18855,8 @@
  NWT_neutrality_DEF:0 "The Northwest Territories"
  NWT_monarchism:0 "Kingdom of Northwest America"
  NWT_monarchism_DEF:0 "The Kingdom of Northwest America"
- NWT_authoritarian_monarchism:0 "North-Western Territory"
- NWT_authoritarian_monarchism_DEF:0 "The North-Western Territory"
+ NWT_authoritarian_monarchism:0 "Colony of Yukoniya"
+ NWT_authoritarian_monarchism_DEF:0 "The Colony of Yukoniya"
  NWT_conservative_monarchism:0 "Dominion of Borealia"
  NWT_conservative_monarchism_DEF:0 "The Dominion of Borealia"
  NWT_centrist_republic:0 "Northern Canadian Republic"
