fixed all missing quotation marks

--- a/localisation/english/MM_countries_l_english.yml
+++ b/localisation/english/MM_countries_l_english.yml
@@ -253,7 +253,7 @@
  INC_authoritarian_monarchism_DEF:0 "The Colony of Indochina"
  INC_stratocratic_monarchism:0 "Colony of German East Asia"
  INC_stratocratic_monarchism_DEF:0 "The Colony of German East Asia"
- INC_republican_fascism:0 "French Indochina"    
+ INC_republican_fascism:0 "French Indochina"
  INC_republican_fascism_DEF:0 "The French Indochina"
  INC_fascism:0 "Governorate of Indochina"
  INC_fascism_DEF:0 "The Governorate of Indochina"
@@ -289,7 +289,7 @@
  WT2_centrist_republic_DEF:0 "Timor"
  WT2_centrist_republic_ADJ:0 "Timorese"
  
- NWR_neutrality:0 "Republic of China Armed Forces" 
+ NWR_neutrality:0 "Republic of China Armed Forces"
  NWR_neutrality_DEF:0 "The Republic of China Armed Forces"
  NWR_neutrality_AJD:0 "Chinese"
  NWR_authoritarian_monarchism:0 "Imperial Army of the Northwest"
@@ -1286,9 +1286,9 @@
  AHN_right_anarchism_ADJ:0 "Adriatic"
  
  NZG_vanguardism:0 "Deutsche Marxistische Republik"
- NZG_vanguardism_DEF:0 "die Deutsche Marxistische Republik" 
+ NZG_vanguardism_DEF:0 "die Deutsche Marxistische Republik"
  NZG_communism:0 "Deutsche Sozialistische Republik"
- NZG_communism_DEF:0 "die Deutsche Sozialistische Republik" 
+ NZG_communism_DEF:0 "die Deutsche Sozialistische Republik"
  NZG_socialism_ideology:0 "Deutschen Sozialistischerbund"
  NZG_socialism_ideology_DEF:0 "Das Deutscher Sozialistischerbund"
  NZG_socialist_monarchy:0 "Allied Occupation of Germany"
@@ -1298,33 +1298,33 @@
  NZG_democratic_monarchism:0 "Deutscher Studentischerfront"
  NZG_democratic_monarchism_DEF:0 "Das Deutscher Studentischerfront"
  NZG_centrist_republic:0 "Deutsches Reich"
- NZG_centrist_republic_DEF:0 "das Deutsches Reich" 
+ NZG_centrist_republic_DEF:0 "das Deutsches Reich"
  NZG_democratic:0 "Deutsches Bundesrepublik"
  NZG_democratic_DEF:0 "Das Deutsches Bundesrepublik"
  NZG_conservative_monarchism:0 "Deutsches Bundesrepublik"
  NZG_conservative_monarchism_DEF:0 "Das Deutsches Bundesrepublik"
  NZG_anocratic_republic:0 "Großgermanisches Reich"
- NZG_anocratic_republic_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_anocratic_republic_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_neutrality:0 "Großgermanisches Reich"
- NZG_neutrality_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_neutrality_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_authoritarian_monarchism:0 "Großgermanisches Reich"
- NZG_authoritarian_monarchism_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_authoritarian_monarchism_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_stratocratic:0 "Großgermanisches Reich"
- NZG_stratocratic_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_stratocratic_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_stratocratic_monarchism:0 "Großdeutsches Reich"
- NZG_stratocratic_monarchism_DEF:0 "Das Großdeutsches Reich" 
+ NZG_stratocratic_monarchism_DEF:0 "Das Großdeutsches Reich"
  NZG_republican_fascism:0 "Großgermanisches Reich"
- NZG_republican_fascism_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_republican_fascism_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_fascism:0 "Großgermanisches Reich"
- NZG_fascism_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_fascism_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_national_socialism:0 "Großgermanisches Reich"
- NZG_national_socialism_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_national_socialism_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_theocratic:0 "Großgermanisches Reich"
- NZG_theocratic_DEF:0 "das Großgermanische Reich der Deutschen Nation" 
+ NZG_theocratic_DEF:0 "das Großgermanische Reich der Deutschen Nation"
  NZG_ADJ:0 "German"
  
  GGM:0 "Großgermanisches Reich"
- GGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation" 
+ GGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation"
  GGM_ADJ:0 "Greater Germanic"
  GGM_socialism_ideology:0 "Deutsche Bundesvolksrepublik"
  GGM_socialism_ideology_DEF:0 "Das Deutsche Bundesvolksrepublik"
@@ -1334,7 +1334,7 @@
  GGM_republican_fascism_DEF:0 "Das Deutsches Nationalsozialistische Republik"
  
  HGM:0 "Großgermanisches Reich"
- HGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation" 
+ HGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation"
  HGM_ADJ:0 "Greater Germanic"
  HGM_stratocratic:0 "Großgermanischer Nationaler Einheitsrat"
  HGM_stratocratic_DEF:0 "Das Großgermanischer Nationaler Einheitsrat"
@@ -1347,7 +1347,7 @@
  HGM_theocratic_ADJ:0 "Greater Germanic"
  
  BGM:0 "Großgermanisches Reich"
- BGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation" 
+ BGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation"
  BGM_ADJ:0 "Greater Germanic"
  BGM_democratic_monarchism:0 "Second German Confederation"
  BGM_democratic_monarchism_DEF:0 "The Second German Confederation"
@@ -1366,7 +1366,7 @@
  BGM_republican_fascism_DEF:0 "Das Faschistische Republik Deutschland"
 
  SGM:0 "Großgermanisches Reich"
- SGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation" 
+ SGM_DEF:0 "Das Großgermanische Reich der Deutschen Nation"
  SGM_ADJ:0 "Greater Germanic"
  SGM_vanguardism:0 "Deutsches Volksrepublik"
  SGM_vanguardism_DEF:0 "Das Deutsches Volksrepublik"
@@ -1381,20 +1381,20 @@
  SGM_centrist_republic:0 "Deutsche Bundesrepublik"
  SGM_centrist_republic_DEF:0 "Die Deutsche Bundesrepublik"
  SGM_neutrality:0 "Deutsches Reich"
- SGM_neutrality_DEF:0 "Das Deutsche Reich" 
+ SGM_neutrality_DEF:0 "Das Deutsche Reich"
  SGM_stratocratic:0 "Deutsche Provisorische Militärregierung"
- SGM_stratocratic_DEF:0 "Die Deutsche Provisorische Militärregierung" 
+ SGM_stratocratic_DEF:0 "Die Deutsche Provisorische Militärregierung"
  SGM_monarchism:0 "Deutsches Kaiserreich"
  SGM_monarchism_DEF:0 "Das Deutsches Kaiserreich"
  SGM_monarchism_ADJ:0 "German"
  SGM_republican_fascism:0 "Großgermanisches Reich"
- SGM_republican_fascism_DEF:0 "Das Großgermanische Reich der Deutschen Nation" 
+ SGM_republican_fascism_DEF:0 "Das Großgermanische Reich der Deutschen Nation"
  SGM_national_socialism:0 "Großdeutsches Reich"
- SGM_national_socialism_DEF:0 "Das Großdeutsches Reich" 
+ SGM_national_socialism_DEF:0 "Das Großdeutsches Reich"
 
  JMY:0 "Jan Mayen"
  JMY_DEF:0 "Jan Mayen"
- JMY_ADJ:0 "Ursine" 
+ JMY_ADJ:0 "Ursine"
  JMY_monarchism:0 "Kingdom of Jan Mayen"
  JMY_monarchism_DEF:0 "The Kingdom of Jan Mayen"
 
@@ -2505,7 +2505,7 @@
  CVS_theocratic_ADJ:0 "Chuvash"
  CVS_centrist_republic:0 "Chuvash Republic"
  CVS_centrist_republic_DEF:0 "The Chuvash Republic"
- CVS_centrist_republic_ADJ:0 "Chuvash
+ CVS_centrist_republic_ADJ:0 "Chuvash"
 
  YMM_neutrality:0 "Tribal Confederation of Yanomami"
  YMM_neutrality_DEF:0 "Tribal Confederation of Yanomami"
@@ -2611,7 +2611,7 @@
  RLP_monarchism_ADJ:0 "Palatine"
  RLP_democratic:0 "Land Rheinland-Pfalz"
  RLP_democratic_DEF:0 "das Land Rheinland-Pfalz"
- RLP_democratic_ADJ:0 "German" 
+ RLP_democratic_ADJ:0 "German"
  RLP_DEF:0 "Rheinland-Pfalz"
  RLP_ADJ:0 "Rheinland-Pfalz"
  
@@ -2673,21 +2673,21 @@
  SAA_ADJ:0 "Sachsen-Anhalt"
  SAA_democratic:0 "Land Sachsen-Anhalt"
  SAA_democratic_DEF:0 "das Land Sachsen-Anhalt"
- SAA_democratic_ADJ:0 "German" 
+ SAA_democratic_ADJ:0 "German"
 
  HSN:0 "Hessen"
  HSN_DEF:0 "Hessen"
  HSN_ADJ:0 "Hessen"
  HSN_democratic:0 "Land Hessen"
  HSN_democratic_DEF:0 "das Land Hessen"
- HSN_democratic_ADJ:0 "German" 
+ HSN_democratic_ADJ:0 "German"
  
  MBV:0 "Mecklenburg-Vorpommern"
  MBV_DEF:0 "Mecklenburg-Vorpommern"
  MBV_ADJ:0 "Mecklenburg-Vorpommern"
  MBV_democratic:0 "Land Mecklenburg-Vorpommern"
  MBV_democratic_DEF:0 "das Land Mecklenburg-Vorpommern"
- MBV_democratic_ADJ:0 "German" 
+ MBV_democratic_ADJ:0 "German"
  
  NRW_liberal_republic:0 "Republic of the Northern Rhine and Westphalia"
  NRW_liberal_republic_DEF:0 "The Republic of the Northern Rhine and Westphalia"
@@ -2695,7 +2695,7 @@
  NRW_socialism_DEF:0 "Nordrhein-Westfalen"
  NRW_democratic:0 "Land Nordrhein-Westfalen"
  NRW_democratic_DEF:0 "das Land Nordrhein-Westfalen"
- NRW_democratic_ADJ:0 "German" 
+ NRW_democratic_ADJ:0 "German"
  NRW:0 "Nordrhein-Westfalen"
  NRW_DEF:0 "Nordrhein-Westfalen"
  NRW_ADJ:0 "Nordrhein-Westfalen"
@@ -2704,7 +2704,7 @@
  NSA_vanguardism_DEF:0 "The North German Peoples Republic"
  NSA_democratic:0 "Land Niedersachsen"
  NSA_democratic_DEF:0 "das Land Niedersachsen"
- NSA_democratic_ADJ:0 "German" 
+ NSA_democratic_ADJ:0 "German"
  NSA_national_socialism:0 "Reichsgau Niedersachsen"
  NSA_national_socialism_DEF:0 "Das Reichsgau Niedersachsen"
  NSA_theocratic:0 "Bishphoric of Münster"
@@ -4204,7 +4204,7 @@
  NBK_liberal_republic:0 "Republic of New Brunswick"
  NBK_liberal_republic_DEF:0 "The Republic of New Brunswick"
  NBK_democratic_monarchism:0 "Province of New Brunswick"
- NBK_democratic_monarchism_DEF:0 "The Province of New Brunswick
+ NBK_democratic_monarchism_DEF:0 "The Province of New Brunswick"
  NBK_centrist_republic:0 "Maritime Union"
  NBK_centrist_republic_DEF:0 "The Maritime Union"
  NBK_centrist_republic_ADJ:0 "Martime"
@@ -8213,7 +8213,7 @@
  XIG:0 "Xikang"
  NIX:0 "Ningxia Ma Clique"
  SHC:0 "Sichuan Clique"
- GND:0 "Guangdong Clique"                                                             
+ GND:0 "Guangdong Clique"
  PIL:0 "Pailingmiao Council"
  SHG:0 "Shangdong"
  EHC:0 "East Hebei"
@@ -8371,7 +8371,7 @@
  CHE_ADJ:0 "Chechen"
  
  DAG:0 "Dagestan"
- DAG_ADJ:0 "Dagestani
+ DAG_ADJ:0 "Dagestani"
  
  KAL:0 "Kalmykia"
  KAL_ADJ:0 "Kalmyk"
@@ -12827,7 +12827,7 @@
 
  NS2_national_socialism:0 "Reichskolonie Neuschwabenland"
  NS2_national_socialism_DEF:0 "das Reichskolonie Neuschwabenland"
- NS2_national_socialism_ADJ:0 "Neuschwäbisch
+ NS2_national_socialism_ADJ:0 "Neuschwäbisch"
  NS2_authoritarian_monarchism:0 "German Antarctica"
  NS2_authoritarian_monarchism_DEF:0 "German Antarctica"
  NS2_authoritarian_monarchism_ADJ:0 "German Antarctican"
@@ -13396,12 +13396,12 @@
  DNI_anocratic_republic_DEF:0 "Dnipropetrovsk Oblast"
  DNI_anocratic_republic_ADJ:0 "Dnipropetrovskian"
  
- BOB:0 "Bobruisk"  
- BOB_DEF:0 "Bobruisk"  
- BOB_ADJ:0 "Bobruiskian" 
- BOB_vanguardism:0 "Babruysk Akruh" 
- BOB_vanguardism_DEF:0 "The Babruysk Akruh" 
- BOB_vanguardism_ADJ:0 "Bobruiskian" 
+ BOB:0 "Bobruisk"
+ BOB_DEF:0 "Bobruisk"
+ BOB_ADJ:0 "Bobruiskian"
+ BOB_vanguardism:0 "Babruysk Akruh"
+ BOB_vanguardism_DEF:0 "The Babruysk Akruh"
+ BOB_vanguardism_ADJ:0 "Bobruiskian"
  BOB_centrist_republic:0 "Babruysk Voblast"
  BOB_centrist_republic_DEF:0 "The Babruysk Voblast"
  BOB_centrist_republic_ADJ:0 "Bobruiskian"
@@ -13409,12 +13409,12 @@
  BOB_neutrality_DEF:0 "The Bobruisk Okrug"
  BOB_neutrality_ADJ:0 "Bobruiskian"
  
- BSV:0 "Borisov"  
- BSV_DEF:0 "Borisov"  
- BSV_ADJ:0 "Borisovian" 
- BSV_vanguardism:0 "Barysaw Akruh" 
- BSV_vanguardism_DEF:0 "The Barysaw Akruh" 
- BSV_vanguardism_ADJ:0 "Borisovian" 
+ BSV:0 "Borisov"
+ BSV_DEF:0 "Borisov"
+ BSV_ADJ:0 "Borisovian"
+ BSV_vanguardism:0 "Barysaw Akruh"
+ BSV_vanguardism_DEF:0 "The Barysaw Akruh"
+ BSV_vanguardism_ADJ:0 "Borisovian"
  BSV_centrist_republic:0 "Barysaw Voblast"
  BSV_centrist_republic_DEF:0 "The Barysaw Voblast"
  BSV_centrist_republic_ADJ:0 "Borisovian"
@@ -13422,12 +13422,12 @@
  BSV_neutrality_DEF:0 "The Borisov Okrug"
  BSV_neutrality_ADJ:0 "Borisovian"
  
- VTB:0 "Vitebsk"  
- VTB_DEF:0 "Vitebsk"  
- VTB_ADJ:0 "Vitebskian" 
- VTB_vanguardism:0 "Vitebsk Akruh" 
- VTB_vanguardism_DEF:0 "The Vitebsk Akruh" 
- VTB_vanguardism_ADJ:0 "Vitebskian" 
+ VTB:0 "Vitebsk"
+ VTB_DEF:0 "Vitebsk"
+ VTB_ADJ:0 "Vitebskian"
+ VTB_vanguardism:0 "Vitebsk Akruh"
+ VTB_vanguardism_DEF:0 "The Vitebsk Akruh"
+ VTB_vanguardism_ADJ:0 "Vitebskian"
  VTB_centrist_republic:0 "Vitebsk Voblast"
  VTB_centrist_republic_DEF:0 "The Vitebsk Voblast"
  VTB_centrist_republic_ADJ:0 "Vitebskian"
@@ -13435,12 +13435,12 @@
  VTB_neutrality_DEF:0 "The Vitebsk Okrug"
  VTB_neutrality_ADJ:0 "Vitebskian"
  
- KLM:0 "Klimavichy"  
- KLM_DEF:0 "Klimavichy"  
- KLM_ADJ:0 "Klimavichian" 
- KLM_vanguardism:0 "Kalinin Akruh" 
- KLM_vanguardism_DEF:0 "The Kalinin Akruh" 
- KLM_vanguardism_ADJ:0 "Klimavichian" 
+ KLM:0 "Klimavichy"
+ KLM_DEF:0 "Klimavichy"
+ KLM_ADJ:0 "Klimavichian"
+ KLM_vanguardism:0 "Kalinin Akruh"
+ KLM_vanguardism_DEF:0 "The Kalinin Akruh"
+ KLM_vanguardism_ADJ:0 "Klimavichian"
  KLM_centrist_republic:0 "Klimavichy Voblast"
  KLM_centrist_republic_DEF:0 "The Kilmavichy Voblast"
  KLM_centrist_republic_ADJ:0 "Klimavichian"
@@ -13448,12 +13448,12 @@
  KLM_neutrality_DEF:0 "The Kalinin Okrug"
  KLM_neutrality_ADJ:0 "Klimavichian"
  
- MGV:0 "Mogilev"  
- MGV_DEF:0 "Mogilev"  
- MGV_ADJ:0 "Mogilevian" 
- MGV_vanguardism:0 "Mahilou Akruh" 
- MGV_vanguardism_DEF:0 "The Mahilou Akruh" 
- MGV_vanguardism_ADJ:0 "Mogilevian" 
+ MGV:0 "Mogilev"
+ MGV_DEF:0 "Mogilev"
+ MGV_ADJ:0 "Mogilevian"
+ MGV_vanguardism:0 "Mahilou Akruh"
+ MGV_vanguardism_DEF:0 "The Mahilou Akruh"
+ MGV_vanguardism_ADJ:0 "Mogilevian"
  MGV_centrist_republic:0 "Mahilou Voblast"
  MGV_centrist_republic_DEF:0 "The Mahilou Voblast"
  MGV_centrist_republic_ADJ:0 "Mogilevian"
@@ -13461,12 +13461,12 @@
  MGV_neutrality_DEF:0 "The Mogilev Okrug"
  MGV_neutrality_ADJ:0 "Mogilevian"
  
- MZY:0 "Mozyr"  
- MZY_DEF:0 "Mozyr"  
- MZY_ADJ:0 "Mozyrian" 
- MZY_vanguardism:0 "Mazyr Akruh" 
- MZY_vanguardism_DEF:0 "The Mazyr Akruh" 
- MZY_vanguardism_ADJ:0 "Mozyrian" 
+ MZY:0 "Mozyr"
+ MZY_DEF:0 "Mozyr"
+ MZY_ADJ:0 "Mozyrian"
+ MZY_vanguardism:0 "Mazyr Akruh"
+ MZY_vanguardism_DEF:0 "The Mazyr Akruh"
+ MZY_vanguardism_ADJ:0 "Mozyrian"
  MZY_centrist_republic:0 "Mazyr Voblast"
  MZY_centrist_republic_DEF:0 "The Mazyr Voblast"
  MZY_centrist_republic_ADJ:0 "Mozyrian"
@@ -13474,12 +13474,12 @@
  MZY_neutrality_DEF:0 "The Mozyr Okrug"
  MZY_neutrality_ADJ:0 "Mozyrian"
  
- MSK:0 "Minsk"  
- MSK_DEF:0 "Minsk"  
- MSK_ADJ:0 "Minskian" 
- MSK_vanguardism:0 "Minsk Akruh" 
- MSK_vanguardism_DEF:0 "The Minsk Akruh" 
- MSK_vanguardism_ADJ:0 "Minskian" 
+ MSK:0 "Minsk"
+ MSK_DEF:0 "Minsk"
+ MSK_ADJ:0 "Minskian"
+ MSK_vanguardism:0 "Minsk Akruh"
+ MSK_vanguardism_DEF:0 "The Minsk Akruh"
+ MSK_vanguardism_ADJ:0 "Minskian"
  MSK_centrist_republic:0 "Minsk Voblast"
  MSK_centrist_republic_DEF:0 "The Minsk Voblast"
  MSK_centrist_republic_ADJ:0 "Minskian"
@@ -13487,12 +13487,12 @@
  MSK_neutrality_DEF:0 "The Minsk Okrug"
  MSK_neutrality_ADJ:0 "Minskian"
  
- OSH:0 "Orsha"  
- OSH_DEF:0 "Orsha"  
- OSH_ADJ:0 "Orshan" 
- OSH_vanguardism:0 "Orsha Akruh" 
- OSH_vanguardism_DEF:0 "The Orsha Akruh" 
- OSH_vanguardism_ADJ:0 "Orshan" 
+ OSH:0 "Orsha"
+ OSH_DEF:0 "Orsha"
+ OSH_ADJ:0 "Orshan"
+ OSH_vanguardism:0 "Orsha Akruh"
+ OSH_vanguardism_DEF:0 "The Orsha Akruh"
+ OSH_vanguardism_ADJ:0 "Orshan"
  OSH_centrist_republic:0 "Orsha Voblast"
  OSH_centrist_republic_DEF:0 "The Orsha Voblast"
  OSH_centrist_republic_ADJ:0 "Orshan"
@@ -13500,12 +13500,12 @@
  OSH_neutrality_DEF:0 "The Orsha Okrug"
  OSH_neutrality_ADJ:0 "Orshan"
  
- PLT:0 "Polotsk"  
- PLT_DEF:0 "Polotsk"  
- PLT_ADJ:0 "Polotskian" 
- PLT_vanguardism:0 "Polatsk Akruh" 
- PLT_vanguardism_DEF:0 "The Polatsk Akruh" 
- PLT_vanguardism_ADJ:0 "Polotskian" 
+ PLT:0 "Polotsk"
+ PLT_DEF:0 "Polotsk"
+ PLT_ADJ:0 "Polotskian"
+ PLT_vanguardism:0 "Polatsk Akruh"
+ PLT_vanguardism_DEF:0 "The Polatsk Akruh"
+ PLT_vanguardism_ADJ:0 "Polotskian"
  PLT_centrist_republic:0 "Polotsk Voblast"
  PLT_centrist_republic_DEF:0 "The Polotsk Voblast"
  PLT_centrist_republic_ADJ:0 "Polotskian"
@@ -13513,12 +13513,12 @@
  PLT_neutrality_DEF:0 "The Polotsk Okrug"
  PLT_neutrality_ADJ:0 "Polotskian"
  
- SSK:0 "Slutsk"  
- SSK_DEF:0 "Slutsk"  
- SSK_ADJ:0 "Slutskian" 
- SSK_vanguardism:0 "Slutsk Akruh" 
- SSK_vanguardism_DEF:0 "The Slutsk Akruh" 
- SSK_vanguardism_ADJ:0 "Slutskian" 
+ SSK:0 "Slutsk"
+ SSK_DEF:0 "Slutsk"
+ SSK_ADJ:0 "Slutskian"
+ SSK_vanguardism:0 "Slutsk Akruh"
+ SSK_vanguardism_DEF:0 "The Slutsk Akruh"
+ SSK_vanguardism_ADJ:0 "Slutskian"
  SSK_centrist_republic:0 "Slutsk Voblast"
  SSK_centrist_republic_DEF:0 "The Slutsk Voblast"
  SSK_centrist_republic_ADJ:0 "Slutskian"
@@ -13526,12 +13526,12 @@
  SSK_neutrality_DEF:0 "The Slutsk Okrug"
  SSK_neutrality_ADJ:0 "Slutskian"
  
- GOM:0 "Gomel"  
- GOM_DEF:0 "Gomel"  
- GOM_ADJ:0 "Gomelian" 
- GOM_vanguardism:0 "Homiel Akruh" 
- GOM_vanguardism_DEF:0 "The Homiel Akruh" 
- GOM_vanguardism_ADJ:0 "Gomelian" 
+ GOM:0 "Gomel"
+ GOM_DEF:0 "Gomel"
+ GOM_ADJ:0 "Gomelian"
+ GOM_vanguardism:0 "Homiel Akruh"
+ GOM_vanguardism_DEF:0 "The Homiel Akruh"
+ GOM_vanguardism_ADJ:0 "Gomelian"
  GOM_centrist_republic:0 "Homiel Voblast"
  GOM_centrist_republic_DEF:0 "The Homiel Voblast"
  GOM_centrist_republic_ADJ:0 "Gomelian"
@@ -13542,12 +13542,12 @@
  GOM_stratocratic_DEF:0 "The Zolin Brigade"
  GOM_stratocratic_ADJ:0 "Zolin's"
  
- RCT:0 "Rechitsa"  
- RCT_DEF:0 "Rechitsa"  
- RCT_ADJ:0 "Rechitsan" 
- RCT_vanguardism:0 "Rechytsa Akruh" 
- RCT_vanguardism_DEF:0 "The Rechytsa Akruh" 
- RCT_vanguardism_ADJ:0 "Rechitsan" 
+ RCT:0 "Rechitsa"
+ RCT_DEF:0 "Rechitsa"
+ RCT_ADJ:0 "Rechitsan"
+ RCT_vanguardism:0 "Rechytsa Akruh"
+ RCT_vanguardism_DEF:0 "The Rechytsa Akruh"
+ RCT_vanguardism_ADJ:0 "Rechitsan"
  RCT_centrist_republic:0 "Rechytsa Voblast"
  RCT_centrist_republic_DEF:0 "The Rechytsa Voblast"
  RCT_centrist_republic_ADJ:0 "Rechitsan"
