--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -4332,7 +4332,7 @@
  DOM_fascism_DEF:0 "The Dominican Empire"
  DOM_national_socialism:0 "Navbase One"
  DOM_national_socialism_DEF:0 "Navbase One"
- DOM_national_socialism_ADJ:0 "Oceanian"
+ DOM_national_socialism
  DOM_ADJ:0 "Dominican"
  
  HAI_vanguardism:0 "Revolutionary Republic of Haiti"
