you too elizabeth

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -405,8 +405,8 @@
  TUN_democratic_DEF:0 "The Republic of Tunisia"
  TUN_neutrality:0 "Republic of Tunisia"
  TUN_neutrality_DEF:0 "The Republic of Tunisia"
- TUN_communism:0 "Tunisian People's Republic"
- TUN_communism_DEF:0 "The Tunisian People's Republic"
+ TUN_communism:0 "Tunisian Soviet"
+ TUN_communism_DEF:0 "The Tunisian Soviet"
  TUN_monarchism:0 "Kingdom of Tunisia"
  TUN_monarchism_DEF:0 "The Kingdom of Tunisia"
  TUN_authoritarian_monarchism:0 "French Protectorate of Tunisia"
@@ -4960,8 +4960,8 @@
  EGY_anarchism_ideology_DEF:0 "The Nubian Tribes"
  EGY_left_anarchism:0 "Free Territory of the Nile"
  EGY_left_anarchism_DEF:0 "The Free Territory of the Nile"
- EGY_vanguardism:0 "People's Republic of Egypt"
- EGY_vanguardism_DEF:0 "The People's Republic of Egypt"
+ EGY_vanguardism:0 "Egyptian Soviet"
+ EGY_vanguardism_DEF:0 "The Egyptian Soviet"
  EGY_communism:0 "Egyptian Commune"
  EGY_communism_DEF:0 "The Egyptian Commune"
  EGY_socialism_ideology:0 "United Arab Republic"
@@ -5970,12 +5970,12 @@
  ALG_liberal_republic_DEF:0 "The Algerian Republic"
  ALG_socialism_ideology:0 "People's Democratic Republic of Algeria"
  ALG_socialism_ideology_DEF:0 "The People's Democratic Republic of Algeria"
+ ALG_communism:0 "Algerian Soviet"
+ ALG_communism_DEF:0 "The Algerian Soviet"
  ALG_anocratic_republic:0 "People's Democratic Republic of Algeria"
  ALG_anocratic_republic_DEF:0 "The People's Democratic Republic of Algeria"
  ALG_neutrality:0 "Spanish Protectorate of Algeria"
  ALG_neutrality_DEF:0 "The Spanish Protectorate of Algeria"
- ALG_communism:0 "Algerian Commune"
- ALG_communism_DEF:0 "The Algerian Commune"
  ALG_monarchism:0 "Kingdom of Algeria"
  ALG_monarchism_DEF:0 "The Kingdom of Algeria"
  ALG_anarchism_ideology:0 "Berber Tribes"
@@ -19403,8 +19403,8 @@
  SCL_anarchism_ideology_DEF:0 "The Cochimí Tribes"
  SCL_anarchism_ideology_ADJ:0 "Cochimí"
  
- CYR_communism:0 "People's Republic of Cyrenaica"
- CYR_communism_DEF:0 "The People's Republic of Cyrenaica"
+ CYR_communism:0 "Cyrenaican Soviet"
+ CYR_communism_DEF:0 "The Cyrenaican Soviet"
  CYR_communism_ADJ:0 "Cyrenaican"
  CYR_centrist_monarchism:0 "Kingdom of Libya"
  CYR_centrist_monarchism_DEF:0 "The Kingdom of Libya"
@@ -20655,9 +20655,9 @@
  BUG_communism:0 "People's Republic of Buganda"
  BUG_communism_DEF:0 "The People's Republic of Buganda"
  BUG_communism_ADJ:0 "Bugandan"
- BUG_democratic:0 "Republic of Buganda"
- BUG_democratic_DEF:0 "The Republic of Buganda"
- BUG_democratic_ADJ:0 "Bugandan"
+ BUG_democratic:0 "State of Kampala"
+ BUG_democratic_DEF:0 "The State of Kampala"
+ BUG_democratic_ADJ:0 "Kampalan"
  BUG_neutrality:0 "Kingdom of Buganda"
  BUG_neutrality_DEF:0 "The Kingdom of Buganda"
  BUG_neutrality_ADJ:0 "Bugandan"
@@ -32120,8 +32120,8 @@
  VEN_right_anarchism_DEF:0 "The Venezuelan Free Economic Zone"
  VEN_ADJ:0 "Venezuelan"
 
- LBA_communism:0 "Commune of Libya"
- LBA_communism_DEF:0 "The Commune of Libya‎"
+ LBA_communism:0 "Tripolitanian Soviet"
+ LBA_communism_DEF:0 "The Tripolitanian Soviet‎"
  LBA_socialism_ideology:0 "Great Socialist People's Libyan Arab Jamahiriya"
  LBA_socialism_ideology_DEF:0 "The Great Socialist People's Libyan Arab Jamahiriya"
  LBA_centrist_republic:0 "State of Libya"
